--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="https://www.facebook.com/shubham.pitekar.1/"><i class="fab fa-facebook-f"></i></a>
              <a href="https://www.instagram.com/shuence/"><i class="fab fa-instagram"></i></a>
              <a href="https://twitter.com/ShubhamPitekar"><i class="fab fa-twitter"></i></a>
-             <a href="https://github.com/its-shubham2323"><i class="fab fa-github"></i></a>
+             <a href="https://github.com/shuence"><i class="fab fa-github"></i></a>
              <a href="https://www.linkedin.com/in/shuence-823a62203/"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
@@ -55,22 +55,26 @@
       </section>
 
       <section class="light">
-        <h2>👩🏽✨ Projects</h2>
+        <h2>✨ Projects</h2>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Check my Github Profile for Projects.
+          <div class="home__social-icon">
+          <a href="https://github.com/its-shubham2323"><i class="fab fa-github"></i></a>
+          </div>
+
         </p>
 
         <h2>✨ Accomplishments</h2>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Not any yet But surely in next few years....
         </p>
 
       </section>
 
       <blockquote>
-        <p>The best way out is always through <br>-Robert Frost</p>
+        <p>Fuck the problems in your life the way life fucks you ✨<br>- Shuence</p>
       </blockquote>
 
       <section class="left">
