--- a/index.html
+++ b/index.html
@@ -78,47 +78,31 @@
       </blockquote>
 
       <section class="left">
-        <h2>✨ Work History</h2>
+        <h2>✨ Timeline</h2>
 
-        <h3>McDonalds</h3>
+        <h3>Primary School</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          At village Z.P. School But I had great time while learning there. The teachers are so nice and supportive. 
         </p>
-        <h3>Burger King</h3>
+        <h3> High School</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          At Ujwalatai Pawar School actually when I was in 8th std My father's got promoted so our family shifted in the city. 
+          I actually love the time I spend in ups got really some good friends and the knowledge i got from tjhe teachers of ups
+          that's insane I mean that really matter alot in my future life.
         </p>
-        <h3>Taco Bell</h3>
+        <h3>College </h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
+          Next year looking forward........
+        </p>        
       </section>
 
       <blockquote>
         <p>Thanks for watching!</p>
       </blockquote>
 
-
     </main>
-    
+
     <script type="module" src="/main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   </body>
 </html>
