--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
 
       <header>
-        <h1>✨ It's Shuence</h1>
+        <h1>✨ It's Shubham Pitekar Aka Shuence</h1>
         <p>🚀 Welcome to my World!</p>
       </header>
 
