--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <main>
 
       <header>
-        <h1>✨ It's Shubham Pitekar Aka Shuence</h1>
+        <h1>✨ It's Shubham Pitekar aka Shuence </h1>
         <p>🚀 Welcome to my World!</p>
+        <p>👀 Which is different from urs!</p>
+        <p>🖤Which is lost!</p>
       </header>
 
 
@@ -55,12 +57,37 @@
       </section>
 
       <section class="light">
+        <h2>The purpose of my life ✨🤍</h2>
+        <p>
+          To dream the impossible dream,
+          To fight the unbeatable foe,
+          To bear the unbearable sorrow,
+          To run where the brave dare not to go,
+          To right the unforgivable wrong,
+          To love the pure and chaste from afar,
+          To reach the unreachable star,
+          This is my quest to follow that star,
+          No matter how hopeless, no matter how far,
+          To see you happy as long as I can,
+          To help you whenever I can ,
+          To do whatever I can to make you smile,
+          To be by ur side whenever you need,
+          To be with you in your good and bad time,
+          To see you growing, being independent,
+          Yes you you are the one of the most important cause for my running breaths , and lastly
+          To fight for the right without questions without pause,
+          To be willing to march into the hell for heavenly cause ✨✨
+        </p>
+      </section>
+
+
+      <section class="light">
         <h2>✨ Projects</h2>
 
         <p>
           Check my Github Profile for Projects.
           <div class="home__social-icon">
-          <a href="https://github.com/its-shubham2323"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/shuence"><i class="fab fa-github"></i></a>
           </div>
 
         </p>
@@ -72,10 +99,6 @@
         </p>
 
       </section>
-
-      <blockquote>
-        <p>Fuck the problems in your life the way life fucks you ✨<br>- Shuence</p>
-      </blockquote>
 
       <section class="left">
         <h2>✨ Timeline</h2>
@@ -95,6 +118,10 @@
           Next year looking forward........
         </p>        
       </section>
+
+      <blockquote>
+        <p>Live life in the way you shouldn't have any regrets on your life when on death bed✨<br>- Shuence</p>
+      </blockquote>
 
       <blockquote>
         <p>Thanks for watching!</p>
