--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   </head>
   <body>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-07R3PSKLKV"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-07R3PSKLKV');
+</script>
+
     <canvas id="bg"></canvas>   
 
     <main>
