--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="img/ani.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="Description" content="Shuence, Shuenc , A Programming enthusiast , Shubham , Shubham Pitekar">
+    <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34="/>
+    <meta name="robots" content="noindex,nofollow">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>It's Shuence</title>
   </head>
